--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>NWK Planning + Zoning</title>
-    <base href="/">
+    <base href="/https://newark-planning.github.io/stackNwk/">
     <style>
         .app-loading {
             position: relative;
